#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
MG-2009-10-13-0: Bugfix:     parse_table_output fails if the width of the 
                             content of the cell is widther than header width.                            
                 Review:     RM

CR-2009-10-13-1: Enhancem.:  install_core_system:
                             always set the host configuration xterm path to the
                             value evaluated by testsuite
                 Review:     SH

CR-2009-10-13-0: Enhancem.:  private_get_xterm_path():
                             prefered xterm binary search path for hp11 is now
                             "/usr/contrib/bin/X11/xterm"
                 Review:     SH

AP-2009-10-13-0: Bugfix:     issue 3129 failed for berkeleydb spooling.
                 Belongs to: JG-2009-10-05-0
                 Bugfix:     set_config - adding configuration from the file.
                 Review:     LP

CR-2009-10-12-2: Cleanup:    o changed logging order for resolve_arch error 
                               output
                 Review:     EB

CR-2009-10-12-1: Enhancem.:  o wait_for_file.exp: Doing ls -la for all directory
                               parts of the file/dir which is waited for
                 Review:     EB

CR-2009-10-12-0: Enhancem.:  o enabled current_version_upgrade test (still some
                               TODOs in code)
                             o enhanced shutdown_bdb_rpc() with optional 
                               parameter to shutdown all bdb server processes 
                               on the specified host